fix spacing

--- a/style.css
+++ b/style.css
@@ -60,3 +60,8 @@ h2 {
 #slider {
     padding: 5px;
 }
+
+#slide {
+    padding : 5px;
+    margin: 10px;
+}
